package herencia;

public enum CollegeCareer {
  MATH, SCIENCE, DATACIENCE, BIOLOGY
}
